# OceanDepth

./: .gitignore  CMakeLists.txt  Makefile  PROGRESSION.md  README.md  main.d  shop.d
docs/: Sujet Markdown.md  display.txt  weapons.md
docs/displays/: display_inventory.txt  display_map.txt  display_menu.txt  display_rewards.txt  display_shop.txt
src/: combat.c  display.c  inventory.c  main.c  monsters.c  player.c  save.c  settings.c  shop.c  shop.h  utils.c
src/combat/: combat.c  combat.h
src/display/: display.c  display.h
src/display_combat/: display_combat.c  display_combat.h
src/display_map/: display_map.c  display_map.h
src/game/: game.c  game.h
src/include/: combat.h  display.h  inventory.h  map.h  monsters.h  player.h  save.h  utils.h
src/inventory/: inventory.c  inventory.h
src/map/: map.c  map.h
src/menu/: menu.c  menu.h
src/monster/: monster.c  monster.h
src/player/: player.c  player.h
src/rewards/: rewards.c  rewards.h
src/save/: save.c  save.h
src/settings/: settings.h
src/shop/: shop.c  shop.h
src/utils/: utils.c  utils.h
